--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <title>Hello World!</title>
+    <script>
+      // install babel hooks in the renderer process
+      require('babel-register');
+      require('./app/main.js');
+    </script>
   </head>
+
   <body>
-    <h1>Hello</h1>
+    <div id="app" />
   </body>
 </html>
