--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script>
       // install babel hooks in the renderer process
       require('babel-register');
-      require('./app/main.js');
+      require('./app/main.jsx');
     </script>
   </head>
 
