--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Hello World!</title>
+    <link rel="stylesheet" href="app/css/photon.min.css">
+
     <script>
       // install babel hooks in the renderer process
       require('babel-register');
